@@ -3,11 +3,18 @@ package org.hit.hradar.domain.competencyReport.query.service;
 import java.util.List;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.hit.hradar.domain.competencyReport.command.domain.repository.ContentRepository;
+import org.hit.hradar.domain.competencyReport.command.domain.repository.ContentTagRepository;
+import org.hit.hradar.domain.competencyReport.competencyReportErrorCode.CompetencyReportErrorCode;
 import org.hit.hradar.domain.competencyReport.query.dto.ContentDTO;
+import org.hit.hradar.domain.competencyReport.query.dto.ContentRowDTO;
 import org.hit.hradar.domain.competencyReport.query.dto.TagDTO;
 import org.hit.hradar.domain.competencyReport.query.dto.request.ContentSearchRequest;
+import org.hit.hradar.domain.competencyReport.query.dto.response.ContentDetailResponse;
 import org.hit.hradar.domain.competencyReport.query.dto.response.ContentSearchResponse;
 import org.hit.hradar.domain.competencyReport.query.mapper.ContentMapper;
+import org.hit.hradar.domain.competencyReport.query.mapper.TagMapper;
+import org.hit.hradar.global.exception.BusinessException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -17,7 +24,7 @@ import org.springframework.transaction.annotation.Transactional;
 public class ContentQueryService {
 
   private final ContentMapper contentMapper;
-
+  private final TagMapper tagMapper;
 
   /**
    * 학습 컨텐츠 목록 조회 (검색/조회)
@@ -26,10 +33,10 @@ public class ContentQueryService {
    */
   public ContentSearchResponse contents(ContentSearchRequest request) {
 
-    List<ContentDTO> contents = contentMapper.findAllContents(request);
+    List<ContentRowDTO> contents = contentMapper.findAllContents(request);
 
     List<ContentDTO> result = contents.stream()
-        .collect(Collectors.groupingBy(ContentDTO::getContentId))
+        .collect(Collectors.groupingBy(ContentRowDTO::getContentId))
         .entrySet().stream()
         .map(entry -> {
 
@@ -38,7 +45,7 @@ public class ContentQueryService {
               .map(f -> new TagDTO(f.getTagId(), f.getTagName()))
               .collect(Collectors.toList());
 
-          ContentDTO first = entry.getValue().get(0);
+          ContentRowDTO first = entry.getValue().get(0);
           ContentDTO dto = new ContentDTO(
                 first.getContentId()
               , first.getTitle()
@@ -50,9 +57,29 @@ public class ContentQueryService {
               ,  tags
           );
           return dto;
-        }).collect(Collectors.toList());
+        }).toList();
 
     return new ContentSearchResponse(result);
 
+  }
+
+  /**
+   * 학습 컨텐츠 상세
+   * @param id
+   * @return
+   */
+  public ContentDetailResponse contentDetail(Long id) {
+
+    // content detail
+    ContentDTO content = contentMapper.findContentByContentId(id);
+    if (content == null) {
+      throw new BusinessException(CompetencyReportErrorCode.CONTENT_NOT_FOUND);
+    }
+
+    // content tag List
+    List<TagDTO> tags = tagMapper.findAllTagsByContentId(id);
+    content.addTags(tags);
+
+    return new ContentDetailResponse(content);
   }
 }
